ローカルデータのテーブル作成、データ追加、テーブルの表示

--- a/local_data.ipynb
+++ b/local_data.ipynb
@@ -37,6 +37,101 @@
     "con = sqlite3.connect(path + db_name)\n",
     "con.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con = sqlite3.connect(path + db_name)\n",
+    "cur = con.cursor()\n",
+    "sql_create_table_sleep = 'CREATE TABLE sleep(date date, time text);'\n",
+    "cur.execute(sql_create_table_sleep)\n",
+    "con.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con = sqlite3.connect(path + db_name)\n",
+    "cur = con.cursor()\n",
+    "sql_insert_time = \"INSERT INTO sleep VALUES(?, ?);\"\n",
+    "sleep_list = [\n",
+    "    ('2023-12-25', '11時間'),\n",
+    "    ('2023-12-26', '9時間'),\n",
+    "    ('2023-12-27', '8時間',),\n",
+    "    ('2023-12-28', '8時間'),\n",
+    "    ('2023-12-29', '9時間'),\n",
+    "    ('2023-12-30', '9時間'),\n",
+    "    ('2023-12-31', '6時間'),\n",
+    "    ('2024-1-1', '8時間'),\n",
+    "    ('2024-1-2', '8時間'),\n",
+    "    ('2024-1-3', '6時間'),\n",
+    "    ('2024-1-4', '9時間'),\n",
+    "    ('2024-1-5', '7時間'),\n",
+    "    ('2024-1-6', '8時間'),\n",
+    "    ('2024-1-7', '5時間'),\n",
+    "    ('2024-1-8', '7時間'),\n",
+    "    ('2024-1-9', '6時間'),\n",
+    "    ('2024-1-10', '10時間'),\n",
+    "    ('2024-1-11', '10時間'),\n",
+    "    ('2024-1-12', '9時間'),\n",
+    "    ('2024-1-13', '7時間'),\n",
+    "    ('2024-1-14', '7時間'),\n",
+    "    ('2024-1-15', '6時間'),\n",
+    "]\n",
+    "cur.executemany(sql_insert_time, sleep_list)\n",
+    "con.commit()\n",
+    "con.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('2023-12-25', '11時間')\n",
+      "('2023-12-26', '9時間')\n",
+      "('2023-12-27', '8時間')\n",
+      "('2023-12-28', '8時間')\n",
+      "('2023-12-29', '9時間')\n",
+      "('2023-12-30', '9時間')\n",
+      "('2023-12-31', '6時間')\n",
+      "('2024-1-1', '8時間')\n",
+      "('2024-1-2', '8時間')\n",
+      "('2024-1-3', '6時間')\n",
+      "('2024-1-4', '9時間')\n",
+      "('2024-1-5', '7時間')\n",
+      "('2024-1-6', '8時間')\n",
+      "('2024-1-7', '5時間')\n",
+      "('2024-1-8', '7時間')\n",
+      "('2024-1-9', '6時間')\n",
+      "('2024-1-10', '10時間')\n",
+      "('2024-1-11', '10時間')\n",
+      "('2024-1-12', '9時間')\n",
+      "('2024-1-13', '7時間')\n",
+      "('2024-1-14', '7時間')\n",
+      "('2024-1-15', '6時間')\n"
+     ]
+    }
+   ],
+   "source": [
+    "con = sqlite3.connect(path + db_name)\n",
+    "cur = con.cursor()\n",
+    "sql_select = 'SELECT*FROM sleep;'\n",
+    "cur.execute(sql_select)\n",
+    "for r in cur:\n",
+    "  print(r)\n",
+    "con.close()"
+   ]
   }
  ],
  "metadata": {
