suimin_listをデータベースに格納

--- a/sleep.ipynb
+++ b/sleep.ipynb
@@ -101,6 +101,185 @@
     "  suimin_list = x.text\n",
     "  print(suimin_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1日の平均睡眠時間（20歳以上）\n",
+      "男性（n=2,668）\n",
+      "割合\n",
+      "女性（n=3,033）\n",
+      "割合\n",
+      "5時間未満\n",
+      "227人\n",
+      "8.5%\n",
+      "276人\n",
+      "9.1%\n",
+      "5時間以上6時間未満\n",
+      "773人\n",
+      "29.0%\n",
+      "955人\n",
+      "31.5%\n",
+      "6時間以上7時間未満\n",
+      "873人\n",
+      "32.7%\n",
+      "1,098人\n",
+      "36.2%\n",
+      "7時間以上8時間未満\n",
+      "536人\n",
+      "20.1%\n",
+      "510人\n",
+      "16.8%\n",
+      "8時間以上9時間未満\n",
+      "190人\n",
+      "7.1%\n",
+      "145人\n",
+      "4.8%\n",
+      "9時間以上\n",
+      "69人\n",
+      "2.6%\n",
+      "49人\n",
+      "1.6%\n"
+     ]
+    }
+   ],
+   "source": [
+    "lines = [line.strip() for line in suimin_list.split('\\n')]\n",
+    "non_empty_lines = [line for line in lines if line]\n",
+    "formatted_text = '\\n'.join(non_empty_lines)\n",
+    "print(formatted_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/kandahiromi/dsprogramming2/DSprogramming2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '/Users/kandahiromi/dsprogramming2/DSprogramming2'\n",
+    "db_name = 'average_sqlite'\n",
+    "con = sqlite3.connect(path + db_name)\n",
+    "con.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con = sqlite3.connect(path + db_name)\n",
+    "cur = con.cursor()\n",
+    "cur.execute('CREATE TABLE IF NOT EXISTS sleep_list_data (sleep_time TEXT);')\n",
+    "for sleep_time in non_empty_lines:\n",
+    "    cur.execute('INSERT INTO sleep_list_data (sleep_time) VALUES (?)', (sleep_time,))\n",
+    "con.commit()\n",
+    "con.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('1日の平均睡眠時間（20歳以上）',)\n",
+      "('男性（n=2,668）',)\n",
+      "('割合',)\n",
+      "('女性（n=3,033）',)\n",
+      "('割合',)\n",
+      "('5時間未満',)\n",
+      "('227人',)\n",
+      "('8.5%',)\n",
+      "('276人',)\n",
+      "('9.1%',)\n",
+      "('5時間以上6時間未満',)\n",
+      "('773人',)\n",
+      "('29.0%',)\n",
+      "('955人',)\n",
+      "('31.5%',)\n",
+      "('6時間以上7時間未満',)\n",
+      "('873人',)\n",
+      "('32.7%',)\n",
+      "('1,098人',)\n",
+      "('36.2%',)\n",
+      "('7時間以上8時間未満',)\n",
+      "('536人',)\n",
+      "('20.1%',)\n",
+      "('510人',)\n",
+      "('16.8%',)\n",
+      "('8時間以上9時間未満',)\n",
+      "('190人',)\n",
+      "('7.1%',)\n",
+      "('145人',)\n",
+      "('4.8%',)\n",
+      "('9時間以上',)\n",
+      "('69人',)\n",
+      "('2.6%',)\n",
+      "('49人',)\n",
+      "('1.6%',)\n"
+     ]
+    }
+   ],
+   "source": [
+    "con = sqlite3.connect(path + db_name)\n",
+    "cur = con.cursor()\n",
+    "sql_select = 'SELECT*FROM sleep_list_data;'\n",
+    "cur.execute(sql_select)\n",
+    "for r in cur:\n",
+    "  print(r)\n",
+    "con.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con = sqlite3.connect(path + db_name)\n",
+    "cur = con.cursor()\n",
+    "cur.execute('CREATE TABLE IF NOT EXISTS time_list_data (sleep_time TEXT);')\n",
+    "for sleep_time in formatted_text:\n",
+    "  cur.execute('INSERT INTO time_list_data (sleep_time) VALUES (?)', (sleep_time))\n",
+    "con.commit()\n",
+    "con.close()"
+   ]
   }
  ],
  "metadata": {
